Creating NLCD sample for MA.

--- a/SampleNLCD.ipynb
+++ b/SampleNLCD.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "661d0050-85b7-477b-ad9d-38a2b3cddc10",
    "metadata": {},
    "outputs": [],
@@ -18,22 +18,24 @@
     "import rasterio as rio\n",
     "import rioxarray as rxr\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "b5488db2-085c-4b74-90b0-893aaffca515",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import earthpy.spatial as es"
+    "import earthpy.spatial as es\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "b1a84f0e-8ba2-4b35-b54d-d1e72c6134c6",
    "metadata": {},
    "outputs": [],
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "20a2e0c3-d7e3-486a-963b-389d7ae36dae",
    "metadata": {},
    "outputs": [
@@ -54,7 +56,7 @@
        "(6169, 10004)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "ccc085b6-50a0-486b-94fe-2f62375c99fa",
    "metadata": {},
    "outputs": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "cdf6f1f6-c0ae-4196-89dc-7626925e82f2",
    "metadata": {},
    "outputs": [
@@ -99,7 +101,7 @@
        " CRS.from_wkt('PROJCS[\"NAD83 / Massachusetts Mainland (ftUS)\",GEOGCS[\"NAD83\",DATUM[\"North_American_Datum_1983\",SPHEROID[\"GRS 1980\",6378137,298.257222101,AUTHORITY[\"EPSG\",\"7019\"]],AUTHORITY[\"EPSG\",\"6269\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4269\"]],PROJECTION[\"Lambert_Conformal_Conic_2SP\"],PARAMETER[\"latitude_of_origin\",41],PARAMETER[\"central_meridian\",-71.5],PARAMETER[\"standard_parallel_1\",42.6833333333333],PARAMETER[\"standard_parallel_2\",41.7166666666667],PARAMETER[\"false_easting\",656166.667],PARAMETER[\"false_northing\",2460625],UNIT[\"US survey foot\",0.304800609601219,AUTHORITY[\"EPSG\",\"9003\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"2249\"]]'))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "7de5482f-25ec-45d1-bb5f-80f5eef361a8",
    "metadata": {},
    "outputs": [],
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "30f01bef-c6f9-4220-98cf-138610f94dd2",
    "metadata": {},
    "outputs": [
@@ -130,7 +132,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "0487203f-95f2-45a8-b832-871db8f843af",
    "metadata": {},
    "outputs": [
@@ -152,7 +154,7 @@
        "np.False_"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "c1d15cc2-8ee7-4be4-8ccc-92371131af0c",
    "metadata": {},
    "outputs": [
@@ -175,7 +177,7 @@
        "      dtype=uint8)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "90336f98-16ef-45cf-b8ce-9ae57e884679",
    "metadata": {},
    "outputs": [
@@ -196,7 +198,7 @@
        "(np.int64(61714676), np.int64(38072131), np.int64(23642545))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "02e14ba1-56ec-4c04-80a6-3d37e3f3c603",
    "metadata": {},
    "outputs": [
@@ -217,7 +219,7 @@
        "(0.6169056287356998, 320.0)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,74 +234,359 @@
    "metadata": {},
    "source": [
     "## Sampling Plan\n",
-    "We want to mimic the sample design of the NRI data. In this design, we take 36 square miles, select one square mile,\n",
+    "We want to mimic the sample design of the NRI data. The NRI sampling design is the following:\n",
+    "1. Divide land into townships (6mi x 6mi)\n",
+    "2. For each township partition the area into Sections (1mi x 1mi)\n",
+    "3. From each township choose quarter sections from each Section such that no there is only one quarter section chosen from each row and column of each township, no selected quarter sections are adjacent to each other, and only one quarter section is selected from each section.\n",
+    "4. From each quarter section, select three points using the restricted randomization procedure.\n",
+    "\n",
+    "In this design, we take 36 square miles, select one square mile,\n",
     "and then select three spatially balanced points within the square mile. This is how we intend to do this:\n",
     "1. Divide the original image into squares with side lengths of 360 pixels (at a 30m resolution this is slightly larger\n",
-    "than 6 miles a side.\n",
+    "than 6 miles a side).\n",
     "2. Remove squares with more than 5% of the pixels equal to \"0\".\n",
-    "3. In the remaining squares select one plot of 60 by 60 pixels.\n",
-    "4. In each selected plot, divide the plot into four quadrants. Select one quadrant to remove. Then select one pixel uniformly from each of the other three."
+    "3. In the remaining squares select six quarter sections of 15 by 15 pixels according to a balanced sample design.\n",
+    "    - First, select six sections such that each section is from a unique column and row.\n",
+    "    - Then randomly select a quarter section from each selected section.\n",
+    "4. In each selected quarter section, select three pixels according to a spatially balanced design.\n",
+    "    - Select one pixel from the top third, one pixel from the middle third and one pixel from the bottom third such that each selected pixel is\n",
+    "   contained within its own column third (left, middle, or center)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b58fa5e-610e-4dbd-8e20-bdc1ef2cbe29",
+   "metadata": {},
+   "source": [
+    "For the NLCD data townships are 360 x 360 pixels, sections are 60 x 60 pixels and quarter sections are 15 x 15 pixels."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "ccced5a9-5e82-4ffd-8e96-77748fc5a1de",
+   "execution_count": 40,
+   "id": "5378ff58-7ba3-465c-b1f2-2a7bef933292",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17.136111111111113, 27.788888888888888)"
+       "([5, 2, 4, 1, 3, 0], [1, 2, 0])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "maval.shape[0] / 360, maval.shape[1] / 360"
+    "def get_spread_cols(num_cols, allow_diag=False):\n",
+    "    avail_cols = [i for i in range(num_cols)]\n",
+    "    col_ind = [random.choice(avail_cols)]\n",
+    "    avail_cols = list(set(avail_cols).difference(set(col_ind)))\n",
+    "    r = 1\n",
+    "    while r < num_cols:\n",
+    "        count = 0\n",
+    "        while len(col_ind) < r + 1:\n",
+    "            count = count + 1\n",
+    "            # Randomly select available column\n",
+    "            col = random.choice(avail_cols)\n",
+    "            # print(f\"col is {col}\")\n",
+    "            # Check if diagonal\n",
+    "            if abs(col - col_ind[r - 1]) != 1 or allow_diag:\n",
+    "                col_ind.append(col)\n",
+    "                avail_cols = list(set(avail_cols).difference(set(col_ind)))\n",
+    "            if count == num_cols * 2:\n",
+    "                r = 1\n",
+    "                avail_cols = [i + 1 for i in range(num_cols)]\n",
+    "                col_ind = [random.choice(avail_cols)]\n",
+    "                avail_cols = list(set(avail_cols).difference(set(col_ind)))\n",
+    "        r = r + 1\n",
+    "                \n",
+    "    return(col_ind)\n",
+    "\n",
+    "get_spread_cols(6), get_spread_cols(3, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "e27e37cd-ecd2-4570-9deb-3f8de41d5357",
+   "execution_count": 30,
+   "id": "38469543-71a2-45ef-837e-6bb03ad79bec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_base_coord(sq_size, block_size, block):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        sq_size: The total number of pixels in a row (or column) in the full image\n",
+    "        block_size: The total number of pixels in a row (or column) in a block\n",
+    "        block: The number of the block. Blocks are numbered like in the following:\n",
+    "        |---|---|---|\n",
+    "        | 0 | 1 | 2 |\n",
+    "        |---|---|---|\n",
+    "        | 3 | 4 | 5 |\n",
+    "        |---|---|---|\n",
+    "        | 6 | 7 | 8 |\n",
+    "        |---|---|---|\n",
+    "    \"\"\"\n",
+    "    total_blocks_in_col = sq_size / block_size\n",
+    "    base_j = (block % total_blocks_in_col) * block_size\n",
+    "    base_i = (block // total_blocks_in_col) * block_size\n",
+    "    return base_i, base_j\n",
+    "\n",
+    "def get_ij_coord(sq_size, block_size, row_i, col_j):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        sq_size: The total number of pixels in a row (or column) in the full image\n",
+    "        block_size: The total number of pixels in a row (or column) in a block\n",
+    "        block: The indices of the block. Blocks are numbered like:\n",
+    "        |-----|-----|-----|\n",
+    "        | 0,0 | 0,1 | 0,2 |\n",
+    "        |-----|-----|-----|\n",
+    "        | 1,0 | 1,1 | 1,2 |\n",
+    "        |-----|-----|-----|\n",
+    "        | 2,0 | 2,1 | 2,2 |\n",
+    "        |-----|-----|-----|\n",
+    "    \"\"\"\n",
+    "    total_blocks_in_col = sq_size / block_size\n",
+    "    base_i = row_i * block_size\n",
+    "    base_j = col_j * block_size\n",
+    "    return base_i, base_j\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "96a31633-3f54-4bbd-a184-b89dbed33147",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "459"
+       "(5, 0)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "17 * 27"
+    "total_blocks_in_col = 3\n",
+    "block = 6\n",
+    "block % total_blocks_in_col, block // total_blocks_in_col\n",
+    "\n",
+    "blocks = random.sample([i for i in range(9)], 3)\n",
+    "block_base = [get_base_coord(15, 5, b) for b in blocks]\n",
+    "i = random.choice([i for i in range(5)])\n",
+    "j = random.choice([i for i in range(5)])\n",
+    "blocks, block_base, i, j, block_base[0][0] + i, block_base[0][1] + j\n",
+    "get_ij_coord(15, 5, 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "d50206e2-bcab-43fe-930e-50023906521f",
+   "execution_count": 35,
+   "id": "22daf164-c407-46ee-b2c2-06d352283aa8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "([(5, 15), (10, 10), (15, 5)], 4, 4)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "col_vec = get_spread_cols(3, True)\n",
+    "i = random.choice([i for i in range(5)])\n",
+    "j = random.choice([i for i in range(5)])\n",
+    "base_lst = [get_ij_coord(15, 5, r_ind, c_ind) for (r_ind, c_ind) in zip([1, 2, 3], col_vec)]\n",
+    "base_lst, i, j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "eb54ae93-f504-4651-8d46-7f07e406724f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, 19), (14, 14), (19, 9)]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(base_r + i, base_c + j) for (base_r, base_c) in base_lst]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "41992966-35bb-4323-a34f-33263194e96c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(7, 13), (12, 18), (17, 8)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_points():\n",
+    "    col_vec = get_spread_cols(3, True)\n",
+    "    i = random.choice([i for i in range(5)])\n",
+    "    j = random.choice([i for i in range(5)])\n",
+    "    base_lst = [get_ij_coord(15, 5, r_ind, c_ind) for (r_ind, c_ind) in zip([1, 2, 3], col_vec)]\n",
+    "    return([(base_r + i, base_c + j) for (base_r, base_c) in base_lst])\n",
+    "    \n",
+    "get_points()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7b20b3cb-dc9f-4f5a-bfc6-e58a5f6a1158",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable int object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 37\u001b[39m\n\u001b[32m     25\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m(coords_lst, qsec_lab, pt_lab)\n\u001b[32m     27\u001b[39m     \u001b[38;5;66;03m# We want to return a dataframe with the following information for each point:\u001b[39;00m\n\u001b[32m     28\u001b[39m     \u001b[38;5;66;03m# - Township label: lab\u001b[39;00m\n\u001b[32m     29\u001b[39m     \u001b[38;5;66;03m# - Section label: Sij\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     34\u001b[39m     \u001b[38;5;66;03m# - Latitude: TBD (get later)\u001b[39;00m\n\u001b[32m     35\u001b[39m     \u001b[38;5;66;03m# - Longitude: TBD (get later)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m37\u001b[39m \u001b[43msample_township\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtest\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36msample_township\u001b[39m\u001b[34m(lab, i_start, j_start)\u001b[39m\n\u001b[32m     17\u001b[39m pt_lab = []\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m (sec_r, sec_c) \u001b[38;5;129;01min\u001b[39;00m sec_coords:\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m (qs_r, qs_c) \u001b[38;5;129;01min\u001b[39;00m quart_secs:\n\u001b[32m     20\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m (pt_r, pt_c) \u001b[38;5;129;01min\u001b[39;00m points:\n\u001b[32m     21\u001b[39m             coords_lst.append([(i_start + sec_r + qs_r + pt_r, j_start + sec_c + qs_c + pt_c)])\n",
+      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable int object"
+     ]
+    }
+   ],
+   "source": [
+    "def sample_township(lab, i_start, j_start):\n",
+    "\n",
+    "    # Step 1: Get Sections, Quarter-Sections, and Points to sample\n",
+    "    # This gives us the section block positions (r, c)\n",
+    "    sec_cols = get_spread_cols(6) \n",
+    "    # TODO: We need to convert to section base coordinates\n",
+    "    sec_coords = [get_ij_coord(360, 60, base_r, base_c) for (base_r, base_c) in zip([0, 1, 2, 3, 4, 5], sec_cols)]\n",
+    "    # This gives us the quarter section block positions (r, c)\n",
+    "    quart_secs = [random.choice([0, 1, 2, 3]) for i in range(6)]\n",
+    "    # This converts block positions to quarter section base coordinates\n",
+    "    qs_coords = [get_base_coord(60, 15, quarter_sec_num) for quarter_sec_num in quart_secs]\n",
+    "    # This gives the coordinates for each point within a quarter section.\n",
+    "    points = get_points()\n",
+    "\n",
+    "    coords_lst = []\n",
+    "    qsec_lab = []\n",
+    "    pt_lab = []\n",
+    "    for (sec_r, sec_c) in sec_coords:\n",
+    "        for (qs_r, qs_c) in quart_secs:\n",
+    "            for (pt_r, pt_c) in points:\n",
+    "                coords_lst.append([(i_start + sec_r + qs_r + pt_r, j_start + sec_c + qs_c + pt_c)])\n",
+    "                qsec_lab.append([f\"S{sec_r}{sec_c}Q{qs_r}{qs_c}\"])\n",
+    "                pt_lab.append([f\"P{pt_r}{pt_c}\"])\n",
+    "\n",
+    "    return(coords_lst, qsec_lab, pt_lab)\n",
+    "    \n",
+    "    # We want to return a dataframe with the following information for each point:\n",
+    "    # - Township label: lab\n",
+    "    # - Section label: Sij\n",
+    "    # - Point label: {1, 2, 3}\n",
+    "    # - Pixel value: TBD (get later)\n",
+    "    # - Original x coordinate\n",
+    "    # - Original y coordinate\n",
+    "    # - Latitude: TBD (get later)\n",
+    "    # - Longitude: TBD (get later)\n",
+    "\n",
+    "sample_township(\"test\", 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6914e7d4-dcdb-4595-af2b-42a38a6903fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "15 * 15 / 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "1069e464-6e91-4433-9dac-38246c77bda3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "secs = {1, 2, 3, 4}.difference({random.choice([1, 2, 3, 4])})\n",
+    "secs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "f0bd978f-d192-44c5-a933-ae88375bfaa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 1, 2]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.sample([i for i in range(9)], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f75c8bfe-d4c8-4bd0-9f28-85c08cd05b30",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
